--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
